baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.AttrFoo {
  x: int
}
class user.Config {
  id: int
  name: string
  data: user.AttrFoo
}
class user.WithBlockAttrs {
  a: int
  b: string
}
function user.from_json(j: baml.json.json) -> user.Config  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.AttrFoo  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.WithBlockAttrs  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "x": self.x.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "id": self.id.to_json(), "name": self.name.to_json(), "data": self.data.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "a": self.a.to_json(), "b": self.b.to_json() }
}
class user.Bar {
  ref: user.Foo
  items: int[]
  nested: user.Foo[]
  mapping: map<string, int>
  opt: int?
}
class user.Foo {
  a: int
  b: string
  c: float
  d: bool
}
function user.from_json(j: baml.json.json) -> user.Foo  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Bar  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "ref": self.ref.to_json(), "items": self.items.to_json(), "nested": self.nested.to_json(), "mapping": self.mapping.to_json(), "opt": self.opt?.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "a": self.a.to_json(), "b": self.b.to_json(), "c": self.c.to_json(), "d": self.d.to_json() }
}
class user.ApiCall {
  request: baml.http.Request
  label: string
}
class user.MixedBuiltin {
  requests: baml.http.Request[]
  metadata: map<string, baml.http.Request>
  maybe_request: baml.http.Request?
  union_request: baml.http.Request | string
}
class user.WithResponse {
  response: baml.http.Response
  status: string
}
class user.WithStreamRef {
  partial: baml.http.Request$stream
}
function user.from_json(j: baml.json.json) -> user.ApiCall  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.WithStreamRef  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.MixedBuiltin  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.WithResponse  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "response": self.response.to_json(), "status": self.status.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "request": self.request.to_json(), "label": self.label.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "partial": self.partial.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "requests": self.requests.to_json(), "metadata": self.metadata.to_json(), "maybe_request": self.maybe_request?.to_json(), "union_request": self.union_request.to_json() }
}
class user.Complex {
  color: user.Color
  literal: 5
  str_literal: "hello"
  union_field: int | string[]
  alias_field: user.StringAlias
  nested_list: user.Inner[][]
  optional_class: user.Inner?
  union_with_null: int | null | string
}
class user.Inner {
  value: int
}
enum user.Color {Red, Green, Blue}
type user.AliasToClass = user.Inner
type user.StringAlias = string
function user.from_json(j: baml.json.json) -> user.Inner  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Complex  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "color": self.color.to_json(), "literal": self.literal.to_json(), "str_literal": self.str_literal.to_json(), "union_field": self.union_field.to_json(), "alias_field": self.alias_field.to_json(), "nested_list": self.nested_list.to_json(), "optional_class": self.optional_class?.to_json(), "union_with_null": self.union_with_null?.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "value": self.value.to_json() }
}
class user.AllDone {
  a: int
  b: string
  c: user.EdgeFoo
}
class user.AllMustExist {
  a: int
  b: string
  c: float
}
class user.EdgeFoo {
  x: int
}
class user.MustExistClass {
  v: int
}
class user.NeverFields {
  lit_int: 42
  lit_str: "fixed"
  lit_bool: true
}
class user.SelfRef {
  name: string
  children: user.SelfRef[]
}
class user.UnionWithMustExist {
  mixed: user.MustExistClass | 5
}
function user.from_json(j: baml.json.json) -> user.SelfRef  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.EdgeFoo  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.UnionWithMustExist  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.AllDone  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.MustExistClass  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.AllMustExist  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.NeverFields  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "a": self.a.to_json(), "b": self.b.to_json(), "c": self.c.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "v": self.v.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "lit_int": self.lit_int.to_json(), "lit_str": self.lit_str.to_json(), "lit_bool": self.lit_bool.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "name": self.name.to_json(), "children": self.children.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "x": self.x.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "mixed": self.mixed.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "a": self.a.to_json(), "b": self.b.to_json(), "c": self.c.to_json() }
}
class user.AllDefaults {
  name: string
  age: int
  score: float
  active: bool
  type: "resume"
  version: 42
  status: user.Status
  edu: user.Education
  scores: int[]
  education: user.Education[]
  nested_edu: user.Education[][]
  edu_map: map<string, user.Education>
  data: user.AliasedType
  mixed: int | user.Education
  maybe: string?
  maybe_list: int[]?
}
class user.Container {
  matrix: int[][]
  grid: user.TreeNode[][]
  groups: map<string, user.TreeNode[]>
}
class user.DynamicClass {
  name: string
}
class user.Education {
  school: string
  year: int
}
class user.Inner {
  value: string
}
class user.Outer {
  inner: user.Inner
}
class user.Primitives {
  name: string
  count: int
  flag: bool
  score: float
}
class user.Resume {
  name: string
  age: int
  type: "resume"
  status: user.Status
  education: user.Education[]
  scores: int[]
  metadata: map<string, string>
}
class user.TreeNode {
  value: string
  children: user.TreeNode[]
}
class user.WithEnum {
  status: user.Status
}
class user.WithLists {
  strings: string[]
  ints: int[]
  classes: user.Inner[]
}
class user.WithLiterals {
  type: "resume"
  version: 1
  enabled: true
}
class user.WithMaps {
  simple: map<string, int>
  complex: map<string, user.Inner>
}
class user.WithNested {
  matrix: int[][]
  class_matrix: user.Inner[][]
  nested_map: map<string, int[]>
  class_nested_map: map<string, user.Inner[]>
}
class user.WithOptionals {
  name: string?
  inner: user.Inner?
  items: int[]?
}
class user.WithUnions {
  simple: int | string
  with_class: user.Inner | user.Primitives
  mixed: int | user.Inner
}
enum user.Status {Active, Inactive}
type user.AliasedType = string | int
type user.Bar = user.Foo | bool
type user.ClassAlias = user.Inner
type user.Foo = int | string
type user.MixedType = int | user.Education
type user.OptionalAlias = user.Inner?
type user.SimpleAlias = string
type user.UnionAlias = int | user.Inner
function user.from_json(j: baml.json.json) -> user.Education  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.TreeNode  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.WithEnum  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Outer  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.WithNested  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.DynamicClass  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Resume  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Primitives  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Inner  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.WithMaps  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.WithOptionals  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.AllDefaults  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Container  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.WithLiterals  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.WithLists  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.WithUnions  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "simple": self.simple.to_json(), "with_class": self.with_class.to_json(), "mixed": self.mixed.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "school": self.school.to_json(), "year": self.year.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "value": self.value.to_json(), "children": self.children.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "status": self.status.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "inner": self.inner.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "matrix": self.matrix.to_json(), "class_matrix": self.class_matrix.to_json(), "nested_map": self.nested_map.to_json(), "class_nested_map": self.class_nested_map.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "name": self.name.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "name": self.name.to_json(), "age": self.age.to_json(), "type": self.type.to_json(), "status": self.status.to_json(), "education": self.education.to_json(), "scores": self.scores.to_json(), "metadata": self.metadata.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "name": self.name.to_json(), "count": self.count.to_json(), "flag": self.flag.to_json(), "score": self.score.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "value": self.value.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "simple": self.simple.to_json(), "complex": self.complex.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "name": self.name?.to_json(), "inner": self.inner?.to_json(), "items": self.items?.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "name": self.name.to_json(), "age": self.age.to_json(), "score": self.score.to_json(), "active": self.active.to_json(), "type": self.type.to_json(), "version": self.version.to_json(), "status": self.status.to_json(), "edu": self.edu.to_json(), "scores": self.scores.to_json(), "education": self.education.to_json(), "nested_edu": self.nested_edu.to_json(), "edu_map": self.edu_map.to_json(), "data": self.data.to_json(), "mixed": self.mixed.to_json(), "maybe": self.maybe?.to_json(), "maybe_list": self.maybe_list?.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "matrix": self.matrix.to_json(), "grid": self.grid.to_json(), "groups": self.groups.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "type": self.type.to_json(), "version": self.version.to_json(), "enabled": self.enabled.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "strings": self.strings.to_json(), "ints": self.ints.to_json(), "classes": self.classes.to_json() }
}
class user.foo.NsClass {
  value: string
}
class user.foo.NsRefToTop {
  inner: root.Inner
  status: root.Status
  items: root.Inner[]
  alias_ref: root.ClassAlias
}
enum user.foo.NsEnum {Alpha, Beta}
type user.foo.NsAlias = string | int
function user.foo.from_json(j: baml.json.json) -> user.foo.NsClass  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.foo.from_json(j: baml.json.json) -> user.foo.NsRefToTop  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.foo.to_json(self: ?) -> baml.json.json  [expr] {
  map { "inner": self.inner.to_json(), "status": self.status.to_json(), "items": self.items.to_json(), "alias_ref": self.alias_ref.to_json() }
}
function user.foo.to_json(self: ?) -> baml.json.json  [expr] {
  map { "value": self.value.to_json() }
}
class user.TopRefToNs {
  ns_class: root.foo.NsClass
  ns_enum: root.foo.NsEnum
  ns_items: root.foo.NsClass[]
  ns_map: map<string, root.foo.NsClass>
  ns_alias: root.foo.NsAlias
}
function user.from_json(j: baml.json.json) -> user.TopRefToNs  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "ns_class": self.ns_class.to_json(), "ns_enum": self.ns_enum.to_json(), "ns_items": self.ns_items.to_json(), "ns_map": self.ns_map.to_json(), "ns_alias": self.ns_alias.to_json() }
}
