baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Config {
  id: int
  name: string
  data: user.AttrFoo
}
class user.AttrFoo {
  x: int
}
class user.WithBlockAttrs {
  a: int
  b: string
}
class user.Config$stream {
  id: int
  name: string
  data: user.AttrFoo
}
class user.AttrFoo$stream {
  x: int | null
}
class user.WithBlockAttrs$stream {
  a: int | null
  b: string | null
}
class user.Foo {
  a: int
  b: string
  c: float
  d: bool
}
class user.Bar {
  ref: user.Foo
  items: int[]
  nested: user.Foo[]
  mapping: map<string, int>
  opt: int | null
}
class user.Foo$stream {
  a: int | null
  b: string | null
  c: float | null
  d: bool | null
}
class user.Bar$stream {
  ref: user.Foo$stream | null
  items: int[]
  nested: user.Foo$stream[]
  mapping: map<string, int>
  opt: int | null
}
class user.ApiCall {
  request: baml.http.Request
  label: string
}
class user.WithResponse {
  response: baml.http.Response
  status: string
}
class user.MixedBuiltin {
  requests: baml.http.Request[]
  metadata: map<string, baml.http.Request>
  maybe_request: baml.http.Request | null
  union_request: baml.http.Request | string
}
class user.WithStreamRef {
  partial: baml.http.Request$stream
}
class user.ApiCall$stream {
  request: baml.http.Request$stream | null
  label: string | null
}
class user.WithResponse$stream {
  response: baml.http.Response$stream | null
  status: string | null
}
class user.MixedBuiltin$stream {
  requests: baml.http.Request$stream[]
  metadata: map<string, baml.http.Request$stream>
  maybe_request: baml.http.Request$stream | null
  union_request: baml.http.Request$stream | string | null
}
class user.WithStreamRef$stream {
  partial: baml.http.Request$stream | null
}
enum user.Color
class user.Inner {
  value: int
}
type user.StringAlias = string
class user.Complex {
  color: user.Color
  literal: 5
  str_literal: "hello"
  union_field: int | string[]
  alias_field: user.StringAlias
  nested_list: user.Inner[][]
  optional_class: user.Inner | null
  union_with_null: int | null | string
}
type user.AliasToClass = user.Inner
class user.Inner$stream {
  value: int | null
}
type user.StringAlias$stream = string
class user.Complex$stream {
  color: user.Color | null
  literal: 5
  str_literal: "hello"
  union_field: int | string[] | null
  alias_field: string | null
  nested_list: user.Inner$stream[][]
  optional_class: user.Inner$stream | null
  union_with_null: int | null | string
}
type user.AliasToClass$stream = user.Inner$stream
class user.SelfRef {
  name: string
  children: user.SelfRef[]
}
class user.AllMustExist {
  a: int
  b: string
  c: float
}
class user.AllDone {
  a: int
  b: string
  c: user.EdgeFoo
}
class user.EdgeFoo {
  x: int
}
class user.NeverFields {
  lit_int: 42
  lit_str: "fixed"
  lit_bool: true
}
class user.MustExistClass {
  v: int
}
class user.UnionWithMustExist {
  mixed: user.MustExistClass | 5
}
class user.SelfRef$stream {
  name: string | null
  children: user.SelfRef$stream[]
}
class user.AllMustExist$stream {
  a: int
  b: string
  c: float
}
class user.AllDone$stream {
  a: int
  b: string
  c: user.EdgeFoo
}
class user.EdgeFoo$stream {
  x: int | null
}
class user.NeverFields$stream {
  lit_int: 42
  lit_str: "fixed"
  lit_bool: true
}
class user.MustExistClass$stream {
  v: int | null
}
class user.UnionWithMustExist$stream {
  mixed: user.MustExistClass$stream | 5
}
class user.Primitives {
  name: string
  count: int
  flag: bool
  score: float
}
enum user.Status
class user.WithEnum {
  status: user.Status
}
class user.WithLiterals {
  type: "resume"
  version: 1
  enabled: true
}
class user.Inner {
  value: string
}
class user.Outer {
  inner: user.Inner
}
class user.WithLists {
  strings: string[]
  ints: int[]
  classes: user.Inner[]
}
class user.WithMaps {
  simple: map<string, int>
  complex: map<string, user.Inner>
}
class user.WithNested {
  matrix: int[][]
  class_matrix: user.Inner[][]
  nested_map: map<string, int[]>
  class_nested_map: map<string, user.Inner[]>
}
class user.WithUnions {
  simple: int | string
  with_class: user.Inner | user.Primitives
  mixed: int | user.Inner
}
class user.WithOptionals {
  name: string | null
  inner: user.Inner | null
  items: int[] | null
}
type user.SimpleAlias = string
type user.ClassAlias = user.Inner
type user.UnionAlias = int | user.Inner
type user.OptionalAlias = user.Inner | null
class user.DynamicClass {
  name: string
}
class user.Education {
  school: string
  year: int
}
type user.AliasedType = string | int
class user.AllDefaults {
  name: string
  age: int
  score: float
  active: bool
  type: "resume"
  version: 42
  status: user.Status
  edu: user.Education
  scores: int[]
  education: user.Education[]
  nested_edu: user.Education[][]
  edu_map: map<string, user.Education>
  data: user.AliasedType
  mixed: int | user.Education
  maybe: string | null
  maybe_list: int[] | null
}
class user.Resume {
  name: string
  age: int
  type: "resume"
  status: user.Status
  education: user.Education[]
  scores: int[]
  metadata: map<string, string>
}
type user.MixedType = int | user.Education
class user.TreeNode {
  value: string
  children: user.TreeNode[]
}
class user.Container {
  matrix: int[][]
  grid: user.TreeNode[][]
  groups: map<string, user.TreeNode[]>
}
type user.Foo = int | string
type user.Bar = user.Foo | bool
class user.Primitives$stream {
  name: string | null
  count: int | null
  flag: bool | null
  score: float | null
}
class user.WithEnum$stream {
  status: user.Status | null
}
class user.WithLiterals$stream {
  type: "resume"
  version: 1
  enabled: true
}
class user.Inner$stream {
  value: string | null
}
class user.Outer$stream {
  inner: user.Inner$stream | null
}
class user.WithLists$stream {
  strings: string[]
  ints: int[]
  classes: user.Inner$stream[]
}
class user.WithMaps$stream {
  simple: map<string, int>
  complex: map<string, user.Inner$stream>
}
class user.WithNested$stream {
  matrix: int[][]
  class_matrix: user.Inner$stream[][]
  nested_map: map<string, int[]>
  class_nested_map: map<string, user.Inner$stream[]>
}
class user.WithUnions$stream {
  simple: int | string | null
  with_class: user.Inner$stream | user.Primitives$stream | null
  mixed: int | user.Inner$stream | null
}
class user.WithOptionals$stream {
  name: string | null
  inner: user.Inner$stream | null
  items: int[] | null
}
type user.SimpleAlias$stream = string
type user.ClassAlias$stream = user.Inner$stream
type user.UnionAlias$stream = int | user.Inner$stream
type user.OptionalAlias$stream = user.Inner$stream | null
class user.DynamicClass$stream {
  name: string | null
}
class user.Education$stream {
  school: string | null
  year: int | null
}
type user.AliasedType$stream = string | int
class user.AllDefaults$stream {
  name: string | null
  age: int | null
  score: float | null
  active: bool | null
  type: "resume"
  version: 42
  status: user.Status | null
  edu: user.Education$stream | null
  scores: int[]
  education: user.Education$stream[]
  nested_edu: user.Education$stream[][]
  edu_map: map<string, user.Education$stream>
  data: string | int | null
  mixed: int | user.Education$stream | null
  maybe: string | null
  maybe_list: int[] | null
}
class user.Resume$stream {
  name: string | null
  age: int | null
  type: "resume"
  status: user.Status | null
  education: user.Education$stream[]
  scores: int[]
  metadata: map<string, string>
}
type user.MixedType$stream = int | user.Education$stream
class user.TreeNode$stream {
  value: string | null
  children: user.TreeNode$stream[]
}
class user.Container$stream {
  matrix: int[][]
  grid: user.TreeNode$stream[][]
  groups: map<string, user.TreeNode$stream[]>
}
type user.Foo$stream = int | string
type user.Bar$stream = user.Foo$stream | bool
class user.foo.NsClass {
  value: string
}
enum user.foo.NsEnum
type user.foo.NsAlias = string | int
class user.foo.NsRefToTop {
  inner: user.Inner
  status: user.Status
  items: user.Inner[]
  alias_ref: user.ClassAlias
}
class user.foo.NsClass$stream {
  value: string | null
}
type user.foo.NsAlias$stream = string | int
class user.foo.NsRefToTop$stream {
  inner: user.Inner$stream | null
  status: user.Status | null
  items: user.Inner$stream[]
  alias_ref: user.Inner$stream | null
}
class user.TopRefToNs {
  ns_class: user.foo.NsClass
  ns_enum: user.foo.NsEnum
  ns_items: user.foo.NsClass[]
  ns_map: map<string, user.foo.NsClass>
  ns_alias: user.foo.NsAlias
}
class user.TopRefToNs$stream {
  ns_class: user.foo.NsClass$stream | null
  ns_enum: user.foo.NsEnum | null
  ns_items: user.foo.NsClass$stream[]
  ns_map: map<string, user.foo.NsClass$stream>
  ns_alias: string | int | null
}
