baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 37388
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type `baml.http.Request$stream` has no member `to_json`
    ╭─[ builtin_refs.baml:23:7 ]
    │
 23 │ class WithStreamRef {
    │       ──────┬──────  
    │             ╰──────── type `baml.http.Request$stream` has no member `to_json`
    │ 
    │ Note: Error code: E0007
────╯

  [validation] Error: Duplicate class `Inner`
    ╭─[ complex.baml:7:7 ]
    │
  7 │ class Inner {
    │       ──┬──  
    │         ╰──── first defined as class here
    │
    ├─[ main.baml:31:7 ]
    │
 31 │ class Inner {
    │       ──┬──  
    │         ╰──── duplicate class definition
    │ 
    │ Note: Error code: E0011
────╯

  [validation] Error: Name `Foo` defined 2 times as: class, type
     ╭─[ basic.baml:1:7 ]
     │
   1 │ class Foo {
     │       ─┬─  
     │        ╰─── first defined as class here
     │
     ├─[ main.baml:145:6 ]
     │
 145 │ type Foo = int | string
     │      ─┬─  
     │       ╰─── duplicate type definition
     │ 
     │ Note: Error code: E0011
─────╯

  [validation] Error: Name `Bar` defined 2 times as: class, type
     ╭─[ basic.baml:8:7 ]
     │
   8 │ class Bar {
     │       ─┬─  
     │        ╰─── first defined as class here
     │
     ├─[ main.baml:146:6 ]
     │
 146 │ type Bar = Foo | bool
     │      ─┬─  
     │       ╰─── duplicate type definition
     │ 
     │ Note: Error code: E0011
─────╯
